--- a/BLACK_GARLIC_HOUSE/src/1_HOME/components/Header.module.css
+++ b/BLACK_GARLIC_HOUSE/src/1_HOME/components/Header.module.css
@@ -28,6 +28,10 @@
     transition: translate .3s;
 }
 
+.menu::before{
+    position: absolute;
+}
+
 .menu nav{
     display: flex;
     flex-direction: column;
