--- a/BLACK_GARLIC_HOUSE/src/2_FUNCIONAMENTO/components/Body.module.css
+++ b/BLACK_GARLIC_HOUSE/src/2_FUNCIONAMENTO/components/Body.module.css
@@ -10,10 +10,6 @@
     justify-content: center;
 }
 
-.fundo h2{
-    margin-left: 1rem;
-}
-
 .video{
     display: flex;
     justify-content: center;
@@ -24,42 +20,49 @@
 }
 
 .preparo{
-    margin-left: 1rem;
+    margin-inline: 1rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 1rem;
 }
 
 .preparo li{
     margin-left: 1rem;
-    text-align: justify;
+    margin-right: 1rem;
+}
+
+.preparo h2{
+    margin-bottom: 0.5rem;
 }
 
 .preparo img{
     width: 9rem;
     margin-bottom: 3.875rem;
+    margin-top: 50%;
 }
 
 .cuidados{
-    margin-left: 1rem;
+    margin-inline: 1rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 1rem;
 }
 
 .cuidados li{
-    margin-left: 1rem;
-    text-align: justify;
+    margin-left: 2.5rem;
+}
+
+.cuidados h2{
+    margin-left: 1.3rem;
+    margin-bottom: 0.5rem;
 }
 
 .cuidados img{
     width: 9rem;
     margin-bottom: 3.875rem;
-}
-
-.informacoes{
-    display: flex;
-    justify-content: center;
+    margin-top: 50%;
 }
 
 @media (min-width: 800px){
@@ -74,37 +77,39 @@
 
     .fundo h2{
         font-size: 2rem;
-        margin-left: 12.5%;
         margin-top: 6.25rem;
+        margin-bottom: 2rem;
     }
 
     .preparo{
-        width: 70%;
-        align-items: center;
-        margin-inline: 15%;
+        width: 46%;
+        margin-left: 27%;
+        margin-top: 0;
     }
 
     .preparo li{
-        font-size: 1.8rem;
+        font-size: 1.5rem;
+        margin-left: 2rem;
     }
 
     .preparo img{
-        width: 15rem;
+        width: 16.5rem;
         margin-left: 5rem;
+        margin-right: 1rem;
     }
     
     .cuidados{
-        width: 70%;
-        align-items: center;
-        margin-inline: 15%;
+        width: 46%;
+        margin-left: 27%;
     }
 
     .cuidados li{
-        font-size: 1.8rem;
+        font-size: 1.5rem;
+        margin-left: 2rem;
     }
 
     .cuidados img{
-        width: 15rem;
-        margin-left: 5rem;
+        width: 18rem;
+        margin-left: 1rem;
     }
 }
