--- a/BLACK_GARLIC_HOUSE/src/1_HOME/components/Body.module.css
+++ b/BLACK_GARLIC_HOUSE/src/1_HOME/components/Body.module.css
@@ -5,7 +5,7 @@
 
 .mobile_image {
     width: 100%;
-    height: 17.375rem;
+    height: 4.5625rem;
     background-image: url(../images/image1_mobile.jpg);
     background-size: cover;
     background-position-y: 40%;
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 1.94rem;
+    margin-bottom: 2.3125rem;
 }
 
 .mobile_image::before {
@@ -29,7 +29,7 @@
     position: absolute;
     z-index: 1000;
     color: white;
-    font-size: 6rem;
+    font-size: 1.875rem;
 }
 
 .objetivo{
@@ -39,7 +39,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 1.2rem;
-    margin-bottom: 7.25rem;
+    margin-bottom: 2.4375rem;
     border-radius: 0.3rem;
 }
 
@@ -52,7 +52,6 @@
 
 .objetivo p{
     text-align: justify;
-    margin-bottom: 0rem;
 }
 
 .publico h1{
@@ -75,7 +74,7 @@
 .mulherRegando{
     display: flex;
     justify-content: center;
-    
+    padding-bottom: 5rem;
 }
 
 .mulherRegando img{
@@ -84,11 +83,19 @@
 }
 
 @media (min-width: 800px){
+    .mobile_image{
+        height: 17.375rem;
+    }
+
+    .mobile_image h1{
+        font-size: 6rem;
+    }
+
     .objetivo{
         width: 60%;
-        height: 25rem;
         padding: 3rem;
-        margin-bottom: 5rem;
+        padding-bottom: 8rem;
+        margin-bottom: 7.3125rem;
     }
 
     .objetivo h1{
@@ -97,13 +104,13 @@
     }
 
     .objetivo p{
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         text-align: center;
     }
 
     .publico p{
         width: 66%;
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         text-align: center;
     }
 
