--- a/BLACK_GARLIC_HOUSE/src/1_HOME/components/Header.module.css
+++ b/BLACK_GARLIC_HOUSE/src/1_HOME/components/Header.module.css
@@ -23,7 +23,7 @@
     position: absolute;
     height: 92.5%;
     padding-block: 1rem;
-
+    z-index: 999;
     translate: -100%;
     transition: translate .3s;
 }
