--- a/BLACK_GARLIC_HOUSE/src/1_HOME/components/Header.module.css
+++ b/BLACK_GARLIC_HOUSE/src/1_HOME/components/Header.module.css
@@ -72,7 +72,7 @@
 .desktop_options{
     display: flex;
     align-items: center;
-    margin-left: 5rem;
+    margin-left: 10%;
     gap: 5rem;
 }
 
@@ -87,7 +87,7 @@
     text-decoration: underline;
 }
 
-@media (min-width: 1320px){
+@media (min-width: 1360px){
     .mobile{
         display: none;
     }
