--- a/BLACK_GARLIC_HOUSE/src/1_HOME/components/Body.module.css
+++ b/BLACK_GARLIC_HOUSE/src/1_HOME/components/Body.module.css
@@ -149,6 +149,7 @@
         width: 66%;
         font-size: 1.5rem;
         text-align: center;
+        margin-left: 17%;
     }
 
     .mulherRegando img{
